# sysdig-lsp

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix  package.nix
.github/git-chglog/: config.yml
.github/workflows/: ci-pull-request.yml  release.yml
docs/: roadmap.md
docs/features/: README.md  build_and_scan.md  code_lens.md  docker_compose_image_analysis.md  iac_scan.md  k8s_manifest_image_analysis.md  layered_analysis.md  scan_base_image.md  vulnerability_explanation.md
src/: lib.rs  lsp_client.rs  main.rs
src/app/: commands.rs  component_factory.rs  document_database.rs  iac_scanner.rs  image_builder.rs  image_scanner.rs  lsp_client.rs  lsp_interactor.rs  lsp_server.rs  mod.rs  queries.rs  scanner.rs
src/app/lsp_server/: command_generator.rs  commands.rs  lsp_server_inner.rs  mod.rs  supported_commands.rs
src/app/markdown/: markdown_data.rs  markdown_fixable_package_table.rs  markdown_layer_data.rs  markdown_policy_evaluated_table.rs  markdown_summary.rs  markdown_summary_table.rs  markdown_vulnerability_evaluated_table.rs  mod.rs
src/domain/: mod.rs
src/domain/iacscanresult/: iac_finding.rs  iac_resource.rs  iac_scan_result.rs  iac_severity.rs  mod.rs
src/domain/scanresult/: accepted_risk.rs  accepted_risk_reason.rs  architecture.rs  evaluation_result.rs  layer.rs  metadata.rs  mod.rs  operating_system.rs  package.rs  package_type.rs  policy.rs  policy_bundle.rs  policy_bundle_rule.rs  policy_bundle_rule_failure.rs  policy_bundle_rule_image_config_failure.rs  policy_bundle_rule_pkg_vuln_failure.rs  scan_result.rs  scan_type.rs  severity.rs  vulnerability.rs  weak_hash.rs
src/infra/: component_factory_impl.rs  compose_ast_parser.rs  docker_image_builder.rs  docker_socket_discovery.rs  dockerfile_ast_parser.rs  k8s_manifest_ast_parser.rs  lsp_logger.rs  mod.rs  scanner_binary_manager.rs  sysdig_iac_scanner.rs  sysdig_iac_scanner_json_result_v1.rs  sysdig_image_scanner.rs  sysdig_image_scanner_json_scan_result_v1.rs  sysdig_image_scanner_result.rs
tests/: common.rs  general.rs  setup.rs  test.rs
tests/fixtures/: Containerfile  Dockerfile  Invalid.dockerfile  compose.yaml  docker-compose.yml  k8s-deployment.yaml
(+4 files in other folders)
