[package]
name = "sysdig-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
dirs = "6.0.0"
regex = "1.11.1"
reqwest = "0.12.14"
semver = "1.0.26"
serde_json = "1.0.135"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tower-service = "0.3.3"

[dev-dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
