[package]
name = "sysdig-lsp"
version = "0.5.0"
edition = "2024"
authors = [ "Sysdig Inc." ]
readme = "README.md"
description = "LSP implementation that integrates vulnerability and IaC scanning directly into your editor"
repository = "https://github.com/sysdiglabs/sysdig-lsp"
license = "Apache-2.0"
publish = false # We don't want to publish it to crates.io yet.

[dependencies]
async-trait = "0.1.85"
bollard = "0.19.0"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
itertools = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.14"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["alloc", "derive"] }
serde_json = "1.0.135"
serial_test = { version = "3.2.0", features = ["file_locks"] }
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
